--- a/exercises/task one/main-menu.html
+++ b/exercises/task one/main-menu.html
@@ -21,11 +21,20 @@
             <a href="main-menu.html" class="Active">Ana Sayfa</a>
           </li>
           <li>
-            <a href="about-us.html" class="">Hakkımızda</a>
+            <a href="contact.html" class="">İletişim</a>
           </li>
-          <li><a href="products.html" class="">Ürünler</a></li>
-          <li><a href="contact.html" class="">İletişim</a></li>
+          <li>
+            <a href="about-us.html">Hakkımızda</a>
+          </li>
+          <li><a href="products.html">Ürünler</a></li>
         </ul>
+      </div>
+      <div class="cntr">
+        <h1>Hoş Geldiniz</h1>
+        <div class="buttons">
+          <button><a href="products.html">Ürünler</a></button>
+          <button>Paketler</button>
+        </div>
       </div>
     </div>
     <script
