--- a/exercises/task one/products.html
+++ b/exercises/task one/products.html
@@ -1,68 +1,117 @@
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SEIRAN CANDLES</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous" />
-    <link rel="stylesheet" href="products.css" />
-  </head>
-  <body>
-    <div class="container">
-      <div class="navbar">
-        <div class="logo">
-          <a href="#">LOGO</a>
-        </div>
-        <ul>
-          <li>
-            <a href="main-menu.html" class="Active">Ana Sayfa</a>
-          </li>
-          <li>
-            <a href="about-us.html" class="">Hakkımızda</a>
-          </li>
-          <li><a href="products.html" class="">Ürünler</a></li>
-          <li><a href="contact.html" class="">İletişim</a></li>
-        </ul>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>SEIRAN CANDLES</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+  <link rel="stylesheet" href="products.css" />
+</head>
+
+<body>
+  <div class="container">
+    <div class="navbar">
+      <div class="logo">
+        <a href="#">LOGO</a>
       </div>
-
-<div class="grid-container">
-
-<div class="card">        
-<img src="pics/0350e7b56d82ccc581d52dd0e2f7ee7c.jpg" alt="">
-</div>
-
-<div class="card">        
-<img src="pics/1444x1506MuseCandleLifestyle_2000x2000_crop_center.webp" alt="">
-</div>
-
-<div class="card">        
-<img src="pics/679ebcf0d52500c69d055c89df2d1faa.jpg" alt="">
-</div>
-
-<div class="card">
-<img src="pics/8c5dea0f735150665b6c4bd12aba4752.png" alt="">
-</div>
-
-<div class="card">        
-<img src="pics/cc8fdb4381710c876aecd7d98580e172.jpg" alt="">
-</div>
-
-<div class="card">        
-<img src="pics/il_1080xN.4101572076_9bm5.jpg" alt="">
-</div>
+      <ul>
+        <li>
+          <a href="main-menu.html" class="Active">Ana Sayfa</a>
+        </li>
+        <li>
+          <a href="about-us.html" class="">Hakkımızda</a>
+        </li>
+        <li><a href="products.html" class="">Ürünler</a></li>
+        <li><a href="contact.html" class="">İletişim</a></li>
+      </ul>
+    </div>
+  </div>
+  </div>
 
 
 
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 py-5">
+        <div class="card" style="width: 18rem;">
+          <img src="pics/0350e7b56d82ccc581d52dd0e2f7ee7c.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+          </div>
+        </div>
+<br>
+        <div class="card" style="width: 18rem;">
+          <img src="pics/1444x1506MuseCandleLifestyle_2000x2000_crop_center.webp" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+          </div>
+        </div>
+<br>
+        <div class="card" style="width: 18rem;">
+          <img src="pics/679ebcf0d52500c69d055c89df2d1faa.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+          </div>
+        </div>
+      </div>
+<br>
+      <div class="col-md-4 py-5">
+        <div class="card" style="width: 18rem;">
+          <img src="pics/8c5dea0f735150665b6c4bd12aba4752.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+          </div>
+        </div>
+<br>
+        <div class="card" style="width: 18rem;">
+          <img src="pics/b1f7ed98e4cb80fed0d1282304418a38.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+          </div>
+        </div>
+<br>
+        <div class="card" style="width: 18rem;">
+          <img src="pics/cc8fdb4381710c876aecd7d98580e172.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+          </div>
+        </div>
+      </div>
+<br>
+      <div class="col-md-4 py-5">
+        <div class="card" style="width: 18rem;">
+          <img src="pics/de4a63cdf5dd7dae15fdea63d1175ff5.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+          </div>
+        </div>
+<br>
+        <div class="card" style="width: 18rem;">
+          <img src="pics/il_1080xN.4101572076_9bm5.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+          </div>
+        </div>
+    </div>
+  </div>
+  </div>
 
 
 
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"></script>
-  </body>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
